# matrixes

./: CMakeLists.txt  Dockerfile  README.md  generateCoverage.sh  runBuildLinux.sh  run_build_targer.bat
docs/: Doxyfile
inc/: Circle.hpp  GeometricObject.hpp  Matrix.hpp  ObjectCounter.hpp  Rectangle.hpp  Square.hpp
src/: Circle.cpp  GeometricObject.cpp  ObjectCounter.cpp  Rectangle.cpp  Square.cpp  main.cpp
test/: testCircle.cpp  testGeometricObject.cpp  testMatrix.cpp  testRectangle.cpp
